# studybuddy-ai-platform

./: .gitignore  README.MD  docker-compose.dev.yml  docker-compose.yml
frontend/: .env.development.example  .env.example  .env.production.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/auth/: AuthHeader.tsx
frontend/src/components/chat/: ChatBubble.tsx  ChatInput.tsx  SessionList.tsx
frontend/src/components/dashboard/: StudyMethodCard.tsx
frontend/src/components/flashcards/: FlashCard.tsx
frontend/src/components/layout/: Background.tsx  Drawer.tsx  Header.tsx  ProfileDropdown.tsx  SessionInfoPill.tsx  Sidebar.tsx
frontend/src/components/notifications/: NotificationCard.tsx  NotificationsDropdown.tsx
frontend/src/components/quiz/: QuizForm.tsx  QuizNavigation.tsx  QuizPaper.tsx  QuizProgress.tsx  QuizQuestion.tsx  QuizResults.tsx
frontend/src/components/security/: ErrorBoundary.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: PillButton.tsx  SubjectCard.tsx  TerminalCard.tsx  Toast.tsx
frontend/src/components/userSettings/: UserAppearanceSettings.tsx  UserProfileSettings.tsx  UserSecuritySettings.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useOAuthHandler.ts
frontend/src/pages/auth/: AuthForm.tsx  ForgotPassword.tsx  ResetPassword.tsx
frontend/src/pages/chat/: ChatSession.tsx  NewChat.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/pages/flashCards/: FlashCards.tsx  FlashCardsSession.tsx  NewFlashCards.tsx
frontend/src/pages/podcast/: Podcast.tsx
frontend/src/pages/presentation/: Presentation.tsx
frontend/src/pages/quiz/: NewQuiz.tsx  Quiz.tsx  QuizSession.tsx
frontend/src/pages/user/: UserSettings.tsx
frontend/src/services/: api.ts  authService.ts  chatService.ts  notificationService.ts
frontend/src/stores/: ChatStore.ts  NotificationStore.ts  ThemeStore.ts  ToastStore.ts  UserStore.ts
frontend/src/stores/chat/: ChatActions.ts  ChatHelpers.ts  ChatStore.ts
frontend/src/styles/: DaisyTheme.css
frontend/src/types/: apiTypes.ts  authTypes.ts  chatTypes.ts  errorTypes.ts  notificationTypes.ts  uiTypes.ts  userTypes.ts
frontend/src/utils/: dateUtils.ts  tokens.ts  validation.ts
services/ai-service/: .env.development.example  .env.example  .env.production.example  Dockerfile  pyproject.toml
services/ai-service/app/: main.py
services/ai-service/app/api/routes/: __init__.py  chat_routes.py  health.py
services/ai-service/app/core/: config.py  database.py  logging.py  mongodb.py
services/ai-service/app/core/config/: __init__.py  config.py  dependencies.py
services/ai-service/app/core/database/: __init__.py  database.py  mongodb.py
services/ai-service/app/core/security/: __init__.py  auth.py
services/ai-service/app/core/utils/: __init__.py  exceptions.py  logging.py
services/ai-service/app/models/: message.py  session.py  user.py
services/ai-service/app/routes/: chat_routes.py  health.py
services/ai-service/app/schemas/: chat.py  common.py
services/ai-service/app/services/: ai_service.py  analytics_service.py  attachment_service.py  chat_service.py  message_service.py  session_service.py
services/api-gateway/: .env.development.example  .env.example  .env.production.example  Dockerfile  package-lock.json  package.json
services/api-gateway/src/: env.d.ts  server.ts
services/api-gateway/src/middleware/: auth.ts  errorHandler.ts  rateLimit.ts  (+1 more)
services/user-service/: .env.development.example  .env.example  .env.production.example  Dockerfile  package-lock.json  package.json  tsconfig.json
services/user-service/src/: env.d.ts  server.ts
(+41 files in other folders)
