[project]
name = "ai-service"
version = "0.1.0"
description = "AI processing microservice for StudyBuddy platform with OpenAI and Gemini integration"
authors = [
    {name = "Jaxon Petersen", email = "thatCashBar@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI
    "fastapi>=0.117.1,<0.118.0",
    "uvicorn[standard]>=0.37.0,<0.38.0",
    
    # Configuration & Environment
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",  # For testing FastAPI endpoints
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app"}]