[project]
name = "ai-service"
version = "0.1.0"
description = "AI processing microservice for StudyBuddy platform with OpenAI and Gemini integration"
authors = [
    {name = "Jaxon Petersen", email = "thatCashBar@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI
    "fastapi>=0.117.1,<0.118.0",
    "uvicorn[standard]>=0.37.0,<0.38.0",
    
    # Configuration & Environment
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    
    # AI/LLM Integration - Unified interface for all providers
    "litellm>=1.52.0",
    
    # Database - MongoDB
    "pymongo>=4.6.0,<5.0.0",
    "motor>=3.3.0,<4.0.0",
    
    # File handling and processing
    "aiofiles>=24.1.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    
    # Document processing
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    
    # Audio/Video processing
    "mutagen>=1.47.0",
    "opencv-python>=4.8.0",
    
    # Logging
    "structlog>=24.4.0",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",  # For testing FastAPI endpoints
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.scripts]
ai-service = "app.main:main"